--- a/Metron/MetronDemo GUI/MetronTester.lpi
+++ b/Metron/MetronDemo GUI/MetronTester.lpi
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="11"/>
+    <Version Value="12"/>
     <PathDelim Value="\"/>
     <General>
+      <Flags>
+        <CompatibilityMode Value="True"/>
+      </Flags>
       <SessionStorage Value="InProjectDir"/>
-      <MainUnit Value="0"/>
       <Title Value="MetronTester"/>
       <Scaled Value="True"/>
       <ResourceType Value="res"/>
@@ -19,9 +21,9 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="1"/>
-      <BuildNr Value="25"/>
+      <BuildNr Value="26"/>
       <Attributes pvaDebug="True" pvaPreRelease="True"/>
-      <StringTable Comments="MetronTester" CompanyName="FORMATIO RETICULARIS" FileDescription="Demo program for PUMA's Metro Library" InternalName="Atlas" LegalCopyright="J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" OriginalFilename="MetronTester" ProductName="Metron" ProductVersion="1.0"/>
+      <StringTable Comments="MetronTester" CompanyName="FORMATIO RETICULARIS" FileDescription="Demo program for PUMA&apos;s Metro Library" InternalName="Atlas" LegalCopyright="© 1994-2026 J. W. Dietrich, FORMATIO RETICULARIS and Ruhr University of Bochum" LegalTrademarks="PUMA Repository" OriginalFilename="MetronTester" ProductName="Metron" ProductVersion="1.0"/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
@@ -32,7 +34,6 @@
     </PublishOptions>
     <RunParams>
       <FormatVersion Value="2"/>
-      <Modes Count="0"/>
     </RunParams>
     <RequiredPackages Count="1">
       <Item1>
